--- a/blog.html
+++ b/blog.html
@@ -36,40 +36,36 @@
 
                                 <ul class="flex flex-wrap md:gap-5 gap-2 items-center">
                                     <li>
-                                        <div
-                                            class="w-auto md:px-6 px-4 flex space-x-3 items-center md:bg-gradient-to-r md:from-[#CB122D] md:via-[#980D22] md:to-[#CB122D] bg-[#FF8300] h-8 md:-skew-x-[50deg]">
+                                        <div class="w-auto md:px-6 px-4 flex space-x-3 items-center  bg-[#FF8300] h-8">
                                             <span
-                                                class="flex items-center gap-2 md:text-base text-sm font-semibold md:skew-x-[50deg] text-white">
+                                                class="flex items-center gap-2 md:text-base text-sm font-semibold text-white">
                                                 Car Care & Maintenance
                                             </span>
 
                                         </div>
                                     </li>
                                     <li>
-                                        <div
-                                            class="w-auto md:px-6 px-4 flex space-x-3 items-center md:bg-gradient-to-r md:from-[#CB122D] md:via-[#980D22] md:to-[#CB122D] bg-[#FF8300] h-8 md:-skew-x-[50deg]">
+                                        <div class="w-auto md:px-6 px-4 flex space-x-3 items-center  bg-[#FF8300] h-8">
                                             <span
-                                                class="flex items-center gap-2 md:text-base text-sm font-semibold md:skew-x-[50deg] text-white">
+                                                class="flex items-center gap-2 md:text-base text-sm font-semibold text-white">
                                                 Service & Repairs
                                             </span>
 
                                         </div>
                                     </li>
                                     <li>
-                                        <div
-                                            class="w-auto md:px-6 px-4 flex space-x-3 items-center md:bg-gradient-to-r md:from-[#CB122D] md:via-[#980D22] md:to-[#CB122D] bg-[#FF8300] h-8 md:-skew-x-[50deg]">
+                                        <div class="w-auto md:px-6 px-4 flex space-x-3 items-center  bg-[#FF8300] h-8">
                                             <span
-                                                class="flex items-center gap-2 md:text-base text-sm font-semibold md:skew-x-[50deg] text-white">
+                                                class="flex items-center gap-2 md:text-base text-sm font-semibold text-white">
                                                 Industry Insights
                                             </span>
 
                                         </div>
                                     </li>
                                     <li>
-                                        <div
-                                            class="w-auto md:px-6 px-4 flex space-x-3 items-center md:bg-gradient-to-r md:from-[#CB122D] md:via-[#980D22] md:to-[#CB122D] bg-[#FF8300] h-8 md:-skew-x-[50deg]">
+                                        <div class="w-auto md:px-6 px-4 flex space-x-3 items-center  bg-[#FF8300] h-8">
                                             <span
-                                                class="flex items-center gap-2 md:text-base text-sm font-semibold md:skew-x-[50deg] text-white">
+                                                class="flex items-center gap-2 md:text-base text-sm font-semibold text-white">
                                                 Petromin Stories
                                             </span>
 
@@ -79,15 +75,14 @@
 
                                 <div class="flex md:justify-end md:items-end w-full">
                                     <button
-                                        class="px-3 flex space-x-3 items-center bg-gradient-to-r from-[#CB122D] via-[#980D22] to-[#CB122D] h-10 md:-skew-x-[18deg]">
-                                        <span
-                                            class="flex items-center gap-1 text-base font-semibold md:skew-x-[18deg] text-white">Read
+                                        class="px-3 flex space-x-3 items-center bg-gradient-to-r from-[#CB122D] via-[#980D22] to-[#CB122D] h-10">
+                                        <span class="flex items-center gap-1 text-base font-semibold text-white">Read
                                             More
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="13" height="13"
-                                                viewBox="0 0 14 19" fill="none">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10"
+                                                viewBox="0 0 10 15" fill="none">
                                                 <path
-                                                    d="M13.888 9.47282L7.11115 18.9382H0L2.2638 15.7831L6.77685 9.47282L2.2638 3.1663L0 0H7.11115L13.888 9.47282Z"
-                                                    fill="white" />
+                                                    d="M1.62207 0.353577L8.53223 7.26373L8.70898 7.44147L1.62207 14.5284L0.353516 13.2598L6.17188 7.44147L0.530273 1.79889L0.353516 1.62213L1.62207 0.353577Z"
+                                                    fill="white" stroke="white" stroke-width="0.5" />
                                             </svg></span>
 
                                     </button>
@@ -111,40 +106,36 @@
 
                                 <ul class="flex flex-wrap md:gap-5 gap-2 items-center">
                                     <li>
-                                        <div
-                                            class="w-auto md:px-6 px-4 flex space-x-3 items-center md:bg-gradient-to-r md:from-[#CB122D] md:via-[#980D22] md:to-[#CB122D] bg-[#FF8300] h-8 md:-skew-x-[50deg]">
+                                        <div class="w-auto md:px-6 px-4 flex space-x-3 items-center  bg-[#FF8300] h-8">
                                             <span
-                                                class="flex items-center gap-2 md:text-base text-sm font-semibold md:skew-x-[50deg] text-white">
+                                                class="flex items-center gap-2 md:text-base text-sm font-semibold text-white">
                                                 Car Care & Maintenance
                                             </span>
 
                                         </div>
                                     </li>
                                     <li>
-                                        <div
-                                            class="w-auto md:px-6 px-4 flex space-x-3 items-center md:bg-gradient-to-r md:from-[#CB122D] md:via-[#980D22] md:to-[#CB122D] bg-[#FF8300] h-8 md:-skew-x-[50deg]">
+                                        <div class="w-auto md:px-6 px-4 flex space-x-3 items-center  bg-[#FF8300] h-8">
                                             <span
-                                                class="flex items-center gap-2 md:text-base text-sm font-semibold md:skew-x-[50deg] text-white">
+                                                class="flex items-center gap-2 md:text-base text-sm font-semibold text-white">
                                                 Service & Repairs
                                             </span>
 
                                         </div>
                                     </li>
                                     <li>
-                                        <div
-                                            class="w-auto md:px-6 px-4 flex space-x-3 items-center md:bg-gradient-to-r md:from-[#CB122D] md:via-[#980D22] md:to-[#CB122D] bg-[#FF8300] h-8 md:-skew-x-[50deg]">
+                                        <div class="w-auto md:px-6 px-4 flex space-x-3 items-center  bg-[#FF8300] h-8">
                                             <span
-                                                class="flex items-center gap-2 md:text-base text-sm font-semibold md:skew-x-[50deg] text-white">
+                                                class="flex items-center gap-2 md:text-base text-sm font-semibold text-white">
                                                 Industry Insights
                                             </span>
 
                                         </div>
                                     </li>
                                     <li>
-                                        <div
-                                            class="w-auto md:px-6 px-4 flex space-x-3 items-center md:bg-gradient-to-r md:from-[#CB122D] md:via-[#980D22] md:to-[#CB122D] bg-[#FF8300] h-8 md:-skew-x-[50deg]">
+                                        <div class="w-auto md:px-6 px-4 flex space-x-3 items-center  bg-[#FF8300] h-8">
                                             <span
-                                                class="flex items-center gap-2 md:text-base text-sm font-semibold md:skew-x-[50deg] text-white">
+                                                class="flex items-center gap-2 md:text-base text-sm font-semibold text-white">
                                                 Petromin Stories
                                             </span>
 
@@ -154,15 +145,14 @@
 
                                 <div class="flex md:justify-end md:items-end w-full">
                                     <button
-                                        class="px-3 flex space-x-3 items-center bg-gradient-to-r from-[#CB122D] via-[#980D22] to-[#CB122D] h-10 md:-skew-x-[18deg]">
-                                        <span
-                                            class="flex items-center gap-1 text-base font-semibold md:skew-x-[18deg] text-white">Read
+                                        class="px-3 flex space-x-3 items-center bg-gradient-to-r from-[#CB122D] via-[#980D22] to-[#CB122D] h-10">
+                                        <span class="flex items-center gap-1 text-base font-semibold text-white">Read
                                             More
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="13" height="13"
-                                                viewBox="0 0 14 19" fill="none">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10"
+                                                viewBox="0 0 10 15" fill="none">
                                                 <path
-                                                    d="M13.888 9.47282L7.11115 18.9382H0L2.2638 15.7831L6.77685 9.47282L2.2638 3.1663L0 0H7.11115L13.888 9.47282Z"
-                                                    fill="white" />
+                                                    d="M1.62207 0.353577L8.53223 7.26373L8.70898 7.44147L1.62207 14.5284L0.353516 13.2598L6.17188 7.44147L0.530273 1.79889L0.353516 1.62213L1.62207 0.353577Z"
+                                                    fill="white" stroke="white" stroke-width="0.5" />
                                             </svg></span>
 
                                     </button>
