--- a/blog.html
+++ b/blog.html
@@ -74,8 +74,7 @@
                                 </ul>
 
                                 <div class="flex md:justify-end md:items-end w-full">
-                                    <button
-                                        class="px-3 flex space-x-3 items-center bg-gradient-to-r from-[#CB122D] via-[#980D22] to-[#CB122D] h-10">
+                                    <button class="px-3 flex space-x-3 items-center bg-[#CB122D] h-10">
                                         <span class="flex items-center gap-1 text-base font-semibold text-white">Read
                                             More
                                             <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10"
@@ -144,8 +143,7 @@
                                 </ul>
 
                                 <div class="flex md:justify-end md:items-end w-full">
-                                    <button
-                                        class="px-3 flex space-x-3 items-center bg-gradient-to-r from-[#CB122D] via-[#980D22] to-[#CB122D] h-10">
+                                    <button class="px-3 flex space-x-3 items-center bg-[#CB122D] h-10">
                                         <span class="flex items-center gap-1 text-base font-semibold text-white">Read
                                             More
                                             <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10"
@@ -204,10 +202,10 @@ Car Care Industry">
                     </div>
                     <div class="flex gap-2 items-baseline">
                         <h2
-                            class="lg:text-xl md:text-lg text-base font-semibold text-[#121212] group-hover:lg:text-[#D4111E] duration-300">
+                            class="lg:text-xl md:text-lg text-base font-semibold text-[#121212] group-hover:lg:text-[#CB122D] duration-300">
                             Why Petromin Express uses only genuine parts</h2>
                         <span>
-                            <svg class="size-5 group-hover:lg:text-[#D4111E] duration-300"
+                            <svg class="size-5 group-hover:lg:text-[#CB122D] duration-300"
                                 xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 13 20"
                                 fill="none">
                                 <path
@@ -220,7 +218,7 @@ Car Care Industry">
                         performance declines more quickly when you opt
                         for cheaper parts?
                     </p>
-                    <ul class="flex flex-wrap w-full items-center gap-3 pt-3">
+                    <ul class="flex flex-wrap w-full items-center gap-3 pt-3 md:pb-0 pb-4">
                         <li class="bg-[#FEF3E8] text-[#FF8300] p-3 font-medium md:text-base text-sm"> Car Care &
                             Maintenance</li>
                         <li class="bg-[#FEF3E8] text-[#FF8300] p-3 font-medium md:text-base text-sm">Repairs & Services
@@ -241,10 +239,10 @@ Car Care Industry">
                     </div>
                     <div class="flex gap-2 items-baseline">
                         <h2
-                            class="lg:text-xl md:text-lg text-base font-semibold text-[#121212] group-hover:lg:text-[#D4111E] duration-300">
+                            class="lg:text-xl md:text-lg text-base font-semibold text-[#121212] group-hover:lg:text-[#CB122D] duration-300">
                             Why Petromin Express uses only genuine parts</h2>
                         <span>
-                            <svg class="size-5 group-hover:lg:text-[#D4111E] duration-300"
+                            <svg class="size-5 group-hover:lg:text-[#CB122D] duration-300"
                                 xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 13 20"
                                 fill="none">
                                 <path
@@ -257,7 +255,7 @@ Car Care Industry">
                         performance declines more quickly when you opt
                         for cheaper parts?
                     </p>
-                    <ul class="flex flex-wrap w-full items-center gap-3 pt-3">
+                    <ul class="flex flex-wrap w-full items-center gap-3 pt-3 md:pb-0 pb-4">
                         <li class="bg-[#FEF3E8] text-[#FF8300] p-3 font-medium md:text-base text-sm"> Car Care &
                             Maintenance</li>
                         <li class="bg-[#FEF3E8] text-[#FF8300] p-3 font-medium md:text-base text-sm">Repairs & Services
@@ -278,10 +276,10 @@ Car Care Industry">
                     </div>
                     <div class="flex gap-2 items-baseline">
                         <h2
-                            class="lg:text-xl md:text-lg text-base font-semibold text-[#121212] group-hover:lg:text-[#D4111E] duration-300">
+                            class="lg:text-xl md:text-lg text-base font-semibold text-[#121212] group-hover:lg:text-[#CB122D] duration-300">
                             Why Petromin Express uses only genuine parts</h2>
                         <span>
-                            <svg class="size-5 group-hover:lg:text-[#D4111E] duration-300"
+                            <svg class="size-5 group-hover:lg:text-[#CB122D] duration-300"
                                 xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 13 20"
                                 fill="none">
                                 <path
@@ -294,7 +292,7 @@ Car Care Industry">
                         performance declines more quickly when you opt
                         for cheaper parts?
                     </p>
-                    <ul class="flex flex-wrap w-full items-center gap-3 pt-3">
+                    <ul class="flex flex-wrap w-full items-center gap-3 pt-3 md:pb-0 pb-4">
                         <li class="bg-[#FEF3E8] text-[#FF8300] p-3 font-medium md:text-base text-sm"> Car Care &
                             Maintenance</li>
                         <li class="bg-[#FEF3E8] text-[#FF8300] p-3 font-medium md:text-base text-sm">Repairs & Services
@@ -307,7 +305,7 @@ Car Care Industry">
             </div>
             <div class="w-full flex justify-center items-center">
                 <button type="button"
-                    class="bg-white h-12 flex justify-center items-center font-medium text-base text-[#696A75] p-4 border border-[#696A754D] hover:lg:bg-[#D4111E] hover:lg:text-white hover:lg:border-white duration-300">Load
+                    class="bg-white h-12 flex justify-center items-center font-medium text-base text-[#696A75] p-4 border border-[#696A754D] hover:lg:bg-[#CB122D] hover:lg:text-white hover:lg:border-white duration-300">Load
                     More</button>
             </div>
         </div>
