--- a/locate-us.html
+++ b/locate-us.html
@@ -34,7 +34,7 @@
     </div>
 
     <section class="bg-white pt-[1.875rem] md:pt-20 h-full">
-        <div class="view flex w-full h-full flex-col md:flex-row lg:flex-row gap-[1.875rem] md:gap-[6.75rem]">
+        <div class="view flex w-full h-full flex-col md:flex-row lg:flex-row gap-[2rem] md:gap-[6.75rem]">
             <div class="flex flex-col pb-2 md:pb-0 w-full md:w-1/3 gap-y-8">
                 <div class="flex gap-3 md:gap-5 flex-col">
                     <h3 class="lg:text-4xl md:text-3xl text-2xl text-black font-bold">Registered Office</h3>
@@ -118,9 +118,11 @@
                 </div>
             </div>
 
-            <div class="md:w-2/3 w-full max-sm:h-dvh md:h-[41.813rem] overflow-hidden">
+            <div class="md:w-2/3 w-full  md:h-[41.813rem] overflow-hidden">
                 <img fetchpriority="low" loading="lazy" src="img/locate_img.webp" alt="locate img" title="locate img"
-                    class="w-full h-full object-cover">
+                    class="w-full h-full object-cover md:block hidden">
+                <img fetchpriority="low" loading="lazy" src="img/locate_img_mobile.webp" alt="locate img"
+                    title="locate img" class="w-full h-full object-cover md:hidden block">
             </div>
 
         </div>
